--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "estate-agent",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
