--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "firebase-admin": "^12.1.1",
     "fs-extra": "^11.2.0",
     "googleapis": "^137.1.0",
     "jsonwebtoken": "^9.0.2",
