--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.592.0",
+    "@aws-sdk/s3-request-presigner": "^3.598.0",
     "aws-sdk": "^2.1638.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
