--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.592.0",
-    "@aws-sdk/s3-request-presigner": "^3.592.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vitejs/plugin-react": "^4.3.1",
-    "google-auth-library": "^9.10.0",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
-    "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.1.4",
+    "swiper-src": "github:nolimits4web/swiper"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
