--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,38 +1,44 @@
-name: Node.js CI
-
-on: [push]
-
+name: Docker Build and Push
+on:
+  push:
+    tags:
+      - "v*"
 jobs:
-  build-api:
-    name: Build API
+  build-and-push:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./api
-
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - dockerfile: ./backend/Dockerfile
+            image: "${ secrets.DOCKERHUB_USERNAME }/example-backend"
+            context: ./backend
+          - dockerfile: ./frontend/Dockerfile
+            image: "${ secrets.DOCKERHUB_USERNAME }/example-frontend"
+            context: ./frontend
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          node-version: '20.x'
-      - run: npm ci
-      - run: npm run build --if-present
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-
-  build-client:
-    name: Build Client
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./client
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          node-version: '20.x'
-      - run: npm ci
-      - run: npm run build --if-present
+          images: ${{ matrix.image }}
+          tags: |
+            type=semver,pattern={{version}}
 
+      - name: Build and push Docker Images
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.context }}
+          file: ${{ matrix.dockerfile }}
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
