--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,8 +1,8 @@
 name: Docker Build and Push
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - master
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -11,10 +11,10 @@ jobs:
       matrix:
         include:
           - dockerfile: ./backend/Dockerfile
-            image: "${ secrets.DOCKERHUB_USERNAME }/example-backend"
+            image: "nourajaz/estate-agent-backend"
             context: ./backend
           - dockerfile: ./frontend/Dockerfile
-            image: "${ secrets.DOCKERHUB_USERNAME }/example-frontend"
+            image: "nourajaz/estate-agent-frontend"
             context: ./frontend
     steps:
       - name: Checkout code
