--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+terraform/.terraform/providers/registry.terraform.io/hashicorp/helm/2.14.0/windows_amd64/terraform-provider-helm_v2.14.0_x5.exe filter=lfs diff=lfs merge=lfs -text
+terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.55.0/windows_amd64/terraform-provider-aws_v5.55.0_x5.exe filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
