fix Dockerfile , Cluster ,

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,32 +1,26 @@
-# Verwende ein Basisimage für das Frontend (Node.js)
-FROM node:lts-alpine AS builder
+# Stage 1: Build the frontend application
+FROM node:14 AS build
 
-# Setze das Arbeitsverzeichnis im Container für das Frontend
 WORKDIR /app
 
-# Kopiere die package.json und package-lock.json und installiere die Abhängigkeiten für das Frontend
-COPY package*.json ./
-RUN npm ci 
+COPY package.json package-lock.json ./
+RUN npm install
 
-# Kopiere den Rest der Frontend-Anwendungsdateien
 COPY . .
-
-# Baue das Frontend
 RUN npm run build
 
-# Verwende ein Basisimage für den Webserver (Nginx)
+# Stage 2: Serve the built frontend application using nginx
 FROM nginx:alpine
 
-# Kopiere die Konfigurationsdatei für Nginx
-#COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 
-# Kopiere die gebauten Dateien aus dem vorherigen Container zum Nginx-Verzeichnis
-#COPY --from=builder /app/build /usr/share/nginx/html
+# Kopieren der gebauten statischen Dateien aus dem ersten Stage
+COPY --from=build /app/dist /usr/share/nginx/html
 
-# Exponiere Port 80
 EXPOSE 80
 
-# Befehl, um den Nginx-Webserver auszuführen
 CMD ["nginx", "-g", "daemon off;"]
+
+
 
 
