--- a/estate-agent-ingress.yaml
+++ b/estate-agent-ingress.yaml
@@ -4,15 +4,24 @@ metadata:
   name: estate-agent-ingress
   namespace: default
 spec:
-  ingressClassName: nginx  
+  ingressClassName: nginx
   rules:
-    - host: a47c3d38d4f9d48d88fe220744757cad-60897428.eu-central-1.elb.amazonaws.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: estate-agent-service  
-                port:
-                  number: 80  
+  - host: placeholder.example.com 
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: estate-agent-frontend
+            port:
+              number: 80
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: estate-agent-backend
+            port:
+              number: 3000
+
+
