--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "vite build"
   },
   "author": "",
   "license": "ISC",
@@ -32,5 +33,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "redux-devtools-extension": "^2.13.9"
+  },
+  "devDependencies": {
+    "vite": "^5.3.1"
   }
 }
