--- a/deployment/estate-agent-backend-deployment.yaml
+++ b/deployment/estate-agent-backend-deployment.yaml
@@ -19,11 +19,11 @@ spec:
     spec:
       containers:
         - name: api-estate-agent-backend
-          image: dd8da757b809 
+          image: 514011952473.dkr.ecr.eu-central-1.amazonaws.com/api-estate-agent-backend:latest
           ports:
             - containerPort: 3000
           env:
             - name: MONGO_URI
-              value: mongodb://mongo-service:27017/deine-datenbank  # Hier die MongoDB Verbindungs-URL eintragen
+              value: mongodb:MONGO_URI=mongodb+srv://engahmadalebrahim:HoBt5fShJm7jycY6@estate-agent.6f9v6zh.mongodb.net/?retryWrites=true&w=majority&appName=estate-agent
             - name: JWT_SECRET
               value: "123kjklasdljdic"
