--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,44 +1,98 @@
-name: Docker Build and Push
+name: CICD
+
 on:
   push:
     branches:
       - master
+
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - dockerfile: ./backend/Dockerfile
-            image: "nourajaz/estate-agent-backend"
-            context: ./backend
-          - dockerfile: ./frontend/Dockerfile
-            image: "nourajaz/estate-agent-frontend"
-            context: ./frontend
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
+      - name: Cache Docker layers
+        uses: actions/cache@v2
         with:
-          images: ${{ matrix.image }}
-          tags: |
-            type=semver,pattern={{version}}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-      - name: Build and push Docker Images
-        uses: docker/build-push-action@v5
+      - name: Build and Push Backend Docker Image
+        run: |
+          docker buildx build --platform linux/amd64 -t yourdockerhubusername/estate-agent-backend:latest --push ./backend
+
+      - name: Build and Push Frontend Docker Image
+        run: |
+          docker buildx build --platform linux/amd64 -t yourdockerhubusername/estate-agent-frontend:latest --push ./frontend
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+
+      - name: Connect to EC2
+        uses: appleboy/ssh-action@master
         with:
-          context: ${{ matrix.context }}
-          file: ${{ matrix.dockerfile }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          port: 22
+
+      - name: Pull Backend Image from Docker Hub
+        run: docker pull yourdockerhubusername/estate-agent-backend:latest
+
+      - name: Pull Frontend Image from Docker Hub
+        run: docker pull yourdockerhubusername/estate-agent-frontend:latest
+
+      - name: Create Docker Network
+        run: |
+          docker network create app-network || true
+
+      - name: Stop and Remove Previous Backend Container
+        run: |
+          docker stop estate-agent-backend || true
+          docker rm estate-agent-backend || true
+
+      - name: Run Backend Container
+        run: |
+          docker run -d --name estate-agent-backend \
+            --network app-network \
+            -p 3000:3000 \
+            -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+            yourdockerhubusername/estate-agent-backend:latest
+
+      - name: Stop and Remove Previous Frontend Container
+        run: |
+          docker stop estate-agent-frontend || true
+          docker rm estate-agent-frontend || true
+
+      - name: Run Frontend Container
+        run: |
+          docker run -d --name estate-agent-frontend \
+            --network app-network \
+            -p 80:80 \
+            yourdockerhubusername/estate-agent-frontend:latest
+
+      - name: Docker Compose Up
+        run: |
+          docker-compose down || true
+          docker-compose up -d
+
+
+
