--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the frontend application
-FROM node:14 AS build
+FROM node:lts-alpine as build
 
 WORKDIR /app
 
@@ -12,12 +12,11 @@ RUN npm run build
 # Stage 2: Serve the built frontend application using nginx
 FROM nginx:alpine
 
-COPY nginx.conf /etc/nginx/nginx.conf
 
 # Kopieren der gebauten statischen Dateien aus dem ersten Stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-EXPOSE 80
+EXPOSE 5173
 
 CMD ["nginx", "-g", "daemon off;"]
 
