--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,14 +1,8 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches:
-      - master
-
+name: ci-cd pipeline
+on: [push]
 env:
   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
   PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,38 +12,39 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 'latest'
-      - name: Build Frontend
+      - name: Build frontend
         run: |
-          cd frontend
+          cd client
           npm install
           npm run build
-      - name: Upload artifacts
+      - name: Upload frontend artifacts
         uses: actions/upload-artifact@v4
         with:
           name: frontend
-          path: frontend/dist
+          path: client/dist
 
   upload_to_s3:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Download artifacts
+      - name: Download frontend artifacts
         uses: actions/download-artifact@v4
         with:
           name: frontend
-          path: frontend/dist
+          path: client/dist
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
       - name: Upload to S3
         run: |
-          aws s3 cp frontend/dist s3://$AWS_S3_BUCKET/ --recursive
+          aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
 
-  deploy:
+  ansible-to-ec2:
     needs: upload_to_s3
     runs-on: ubuntu-latest
     steps:
@@ -66,19 +61,20 @@ jobs:
           export ANSIBLE_HOST_KEY_CHECKING=False
       - name: Copy backend to EC2
         run: |
-          scp -i ex-key.pem -r backend ec2-user@${{ secrets.PUBLIC_IP }}:/home/ec2-user/backend
+          scp -i ex-key.pem -r api ec2-user@${{ secrets.PUBLIC_IP }}:/home/ec2-user/api
       - name: Run Ansible playbook
         run: |
           ansible-playbook deploy_backend.yml --private-key=./ex-key.pem
           rm -f ./ex-key.pem
 
   start-backend:
-    needs: deploy
+    needs: ansible-to-ec2
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Start backend on EC2
         run: |
-          ssh -i ./ex-key.pem ec2-user@${{ secrets.PUBLIC_IP }} "cd /home/ec2-user/backend && npm install && npm start"
+          ssh -i ./ex-key.pem ec2-user@${{ secrets.PUBLIC_IP }} "cd /home/ec2-user/api && npm install && npm start"
+
 
 
