--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI-CD Pipeline
 on:
   push:
     branches:
-      - main
+      - master
 
 env:
   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
