--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,30 +1,23 @@
-# Beispiel für eine einfache nginx-Konfiguration
-user  nginx;
-worker_processes  1;
+server {
+    listen 80;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+    server_name localhost;
 
-events {
-    worker_connections  1024;
-}
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    location /api/ {
+        proxy_pass http://backend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
+    error_page 404 /index.html;
+    location = /index.html {
+        internal;
+    }
 }
