--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,25 @@
-version: '3.8'
-
+# docker-compose.yml
+version: "3.8"
 services:
-  backend:
-    build: ./api
-    ports:
-      - "3000:3000"
-    env_file:
-      - .env  
-    volumes:
-      - ./backend:/app
-
   frontend:
     build: ./client
     ports:
       - "5173:80"
-    environment:
-      - BACKEND_URL=http://backend:3000 
     depends_on:
       - backend
+    environment:
+      - BACKEND_URL=https://docker.compose.local/
+
+  backend:
+    build: ./api
+    ports:
+      - "3000:3000"
+
+  proxy:
+    image: nginx:alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
