--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -61,35 +61,33 @@ jobs:
         run: |
           aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
 
-  ansible-to-ec2:
-    needs: upload_to_s3
-    runs-on: ubuntu-latest
-    steps:
-      - name: Add host to known_hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.INSTANCE_IP }} >> ~/.ssh/known_hosts
-          ssh-keyscan ${{ secrets.PUBLIC_IP }} >> ~/.ssh/known_hosts
-
-      - name: Set up Ansible
-        run: |
-          echo "$PRIVATE_KEY" > ./ex-key.pem
-          chmod 600 ex-key.pem
-          export ANSIBLE_HOST_KEY_CHECKING=False
-
-      - name: Copy backend to EC2
-        run: |
-          scp -i ex-key.pem -r api ec2-user@${{ secrets.PUBLIC_IP }}:/home/ec2-user/api
-
-      - name: Run Ansible playbook
-        run: |
-          ansible-playbook deploy_backend.yml --private-key=./ex-key.pem
-          rm -f ./ex-key.pem
-
-  start-backend:
-    needs: ansible-to-ec2
-    runs-on: ubuntu-latest
-    steps:
-      - name: Start backend on EC2
-        run: |
-          ssh -i ./ex-key.pem ec2-user@${{ secrets.PUBLIC_IP }} "cd /home/ec2-user/api && npm install && npm start"
+        build_and_deploy_backend:
+            name: Build and Deploy Backend
+            runs-on: ubuntu-latest
+                
+            steps:
+            - name: Checkout Repository
+              uses: actions/checkout@v4 
+            
+            - name: Login to DockerHub
+              uses: docker/login-action@v3
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_TOKEN }}
+            - name: Build and push backend Docker image
+              run: |
+                  docker build -t ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} .
+                  docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }}
+                  docker tag ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
+                  docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
+    
+            - name: Install Docker on EC2
+              run: |
+                echo "$SSH_PRIVATE_KEY" > ./private_key.pem
+                chmod 600 ./private_key.pem
+                ssh -i ./private_key.pem -o StrictHostKeyChecking=no $EC2_HOST "
+                sudo yum update -y
+                sudo yum install -y docker
+                sudo service docker start
+                sudo docker run -d -p 80:5000 $DOCKER_USERNAME/backend-image:latest
+                "
