--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Verify downloaded artifacts
         run: ls -al client/dist  
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -61,33 +62,33 @@ jobs:
         run: |
           aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
 
-        build_and_deploy_backend:
-            name: Build and Deploy Backend
-            runs-on: ubuntu-latest
-                
-            steps:
-            - name: Checkout Repository
-              uses: actions/checkout@v4 
+  build_and_deploy_backend:
+    name: Build and Deploy Backend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4 
             
-            - name: Login to DockerHub
-              uses: docker/login-action@v3
-              with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_TOKEN }}
-            - name: Build and push backend Docker image
-              run: |
-                  docker build -t ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} .
-                  docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }}
-                  docker tag ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
-                  docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and push backend Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
     
-            - name: Install Docker on EC2
-              run: |
-                echo "$SSH_PRIVATE_KEY" > ./private_key.pem
-                chmod 600 ./private_key.pem
-                ssh -i ./private_key.pem -o StrictHostKeyChecking=no $EC2_HOST "
-                sudo yum update -y
-                sudo yum install -y docker
-                sudo service docker start
-                sudo docker run -d -p 80:5000 $DOCKER_USERNAME/backend-image:latest
-                "
+      - name: Install Docker on EC2
+        run: |
+          echo "$PRIVATE_KEY" > ./private_key.pem
+          chmod 600 ./private_key.pem
+          ssh -i ./private_key.pem -o StrictHostKeyChecking=no $EC2_HOST "
+            sudo yum update -y
+            sudo yum install -y docker
+            sudo service docker start
+            sudo docker run -d -p 80:5000 $DOCKER_USERNAME/backend-image:latest
+          "
