--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,7 +82,7 @@ jobs:
           docker tag ${{ secrets.DOCKER_USERNAME }}/backend-image:${{ github.run_number }} ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/backend-image:latest
     
-      - name: Install Docker on EC2
+      - name: Install Docker on EC2 and run container
         run: |
           echo "$PRIVATE_KEY" > ./private_key.pem
           chmod 600 ./private_key.pem
@@ -92,3 +92,7 @@ jobs:
             sudo service docker start
             sudo docker run -d -p 80:5000 $DOCKER_USERNAME/backend-image:latest
           "
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
