--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-  PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-  INSTANCE_IP: ${{ secrets.INSTANCE_IP }}  # Hier wird das geheime EC2_HOST durch INSTANCE_IP ersetzt
+  PRIVATE_KEY: ${{ secrets.MY_EC2_SSH_KEY }}
+  INSTANCE_IP: ${{ secrets.EC2_HOST }}
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
 jobs:
@@ -64,40 +64,33 @@ jobs:
         run: |
           aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
 
-  build_and_deploy_backend:
+  deploy:
     needs: upload_to_s3
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4 
-            
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          node-version: '16.x'
 
-      - name: Build and push backend Docker image
+      - name: Build and push Docker image
         run: |
-          cd api  # Wechsel in das Verzeichnis, das den Dockerfile enthält
-          docker build -t $DOCKER_USERNAME/backend-image:${{ github.run_number }} .
-          docker push $DOCKER_USERNAME/backend-image:${{ github.run_number }}
-          docker tag $DOCKER_USERNAME/backend-image:${{ github.run_number }} $DOCKER_USERNAME/backend-image:latest
-          docker push $DOCKER_USERNAME/backend-image:latest
-      
-      - name: Debug Environment Variables
-        run: |
-          echo "EC2_HOST: $INSTANCE_IP"
-          echo "DOCKER_USERNAME: $DOCKER_USERNAME"
+          docker build -t dummy-server .
+          docker tag dummy-server:latest ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker push ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
 
-      - name: Install Docker on EC2 and run container
-        run: |
-          echo "$PRIVATE_KEY" > ./private_key.pem
-          chmod 600 ./private_key.pem
-          ssh -i ./private_key.pem -o StrictHostKeyChecking=no $INSTANCE_IP "
-            sudo yum update -y
-            sudo yum install -y docker
-            sudo service docker start
-            sudo docker run -d -p 80:5000 $DOCKER_USERNAME/backend-image:latest
-          "
-
+      - name: SSH into EC2 instance and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.MY_EC2_SSH_KEY }}
+          script: |
+            sudo docker pull ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+            sudo docker stop my-node-app || true
+            sudo docker rm my-node-app || true
+            sudo docker run -d -p 3000:3000 --name my-node-app ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
