--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
+          # Assuming the Dockerfile is in the root directory. Adjust the path if necessary.
           docker build -t dummy-server .
           docker tag dummy-server:latest ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
