--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
 jobs:
-  build:
+  build_frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -36,8 +36,8 @@ jobs:
           name: frontend
           path: client/dist
 
-  upload_to_s3:
-    needs: build
+  upload_frontend_to_s3:
+    needs: build_frontend
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -64,8 +64,7 @@ jobs:
         run: |
           aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
 
-  deploy:
-    needs: upload_to_s3
+  build_backend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -78,20 +77,24 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          # Assuming the Dockerfile is in the root directory. Adjust the path if necessary.
-          docker build -t dummy-server .
-          docker tag dummy-server:latest ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+          cd api
+          docker build -t estate-agent-backend .
+          docker tag estate-agent-backend:latest ${{ secrets.DOCKER_REPO_URL }}/estate-agent-backend:latest
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+          docker push ${{ secrets.DOCKER_REPO_URL }}/estate-agent-backend:latest
 
+  deploy_backend_to_ec2:
+    needs: build_backend
+    runs-on: ubuntu-latest
+    steps:
       - name: SSH into EC2 instance and deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.EC2_HOST }}
+          host: ${{ secrets.INSTANCE_IP }}
           username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.MY_EC2_SSH_KEY }}
+          key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
-            sudo docker stop my-node-app || true
-            sudo docker rm my-node-app || true
-            sudo docker run -d -p 3000:3000 --name my-node-app ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+            sudo docker pull ${{ secrets.DOCKER_REPO_URL }}/estate-agent-backend:latest
+            sudo docker stop estate-agent-backend || true
+            sudo docker rm estate-agent-backend || true
+            sudo docker run -d -p 3000:3000 --name estate-agent-backend ${{ secrets.DOCKER_REPO_URL }}/estate-agent-backend:latest
