change backend url

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,84 +1,91 @@
 name: CI/CD Pipeline
-
-on:
-  push:
-    branches:
-      - master
-
-env:
-  AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-  PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-
+on: [push]
 jobs:
-  build:
+  backend-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'latest'
-      - name: Build Frontend
-        run: |
-          cd frontend
-          npm install
-          npm run build
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend
-          path: frontend/dist
-
-  upload_to_s3:
-    needs: build
+    - uses: actions/checkout@v4
+    - name: Installiere NodeJS
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - name: Installiere Abhängigkeiten
+      run: |
+        cd backend
+        npm install
+    - name: Teste
+      run: |
+        cd backend
+        npm test -- --detectOpenHandles --forceExit
+  frontend-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend
-          path: frontend/dist
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-      - name: Upload to S3
-        run: |
-          aws s3 cp frontend/dist s3://$AWS_S3_BUCKET/ --recursive
-
-  deploy:
-    needs: upload_to_s3
+    - uses: actions/checkout@v4
+    - name: Installiere NodeJS
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22'
+    - name: Installiere Abhängigkeiten
+      run: |
+        cd frontend
+        npm install
+    - name: Teste
+      run: |
+        cd frontend
+  build-backend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Add host to known_hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.INSTANCE_IP }} >> ~/.ssh/known_hosts
-          ssh-keyscan ${{ secrets.PUBLIC_IP }} >> ~/.ssh/known_hosts
-      - name: Set up Ansible
-        run: |
-          echo "$PRIVATE_KEY" > ./ex-key.pem
-          chmod 600 ex-key.pem
-          export ANSIBLE_HOST_KEY_CHECKING=False
-      - name: Copy backend to EC2
-        run: |
-          scp -i ex-key.pem -r backend ec2-user@${{ secrets.PUBLIC_IP }}:/home/ec2-user/backend
-      - name: Run Ansible playbook
-        run: |
-          ansible-playbook deploy_backend.yml --private-key=./ex-key.pem
-          rm -f ./ex-key.pem
-
-  start-backend:
-    needs: deploy
+    - uses: actions/checkout@v4
+    - name:  Baue Docker Image fürs Backend
+      run: |
+        docker build -t backend:1.0.0 ./backend
+    - name: Loggen uns im Docker Hub ein
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+    - name: Pushen des Docker Images
+      run: |
+        docker tag backend:1.0.0 ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+        docker push ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+  build-frontend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Start backend on EC2
-        run: |
-          ssh -i ./ex-key.pem ec2-user@${{ secrets.PUBLIC_IP }} "cd /home/ec2-user/backend && npm install && npm start"
-
-
+    - uses: actions/checkout@v4
+    - name: Installiere NodeJS
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - name: Installiere Abhängigkeiten
+      run: |
+        cd frontend
+        npm install
+    - name: Baue das Frontend
+      run: |
+        cd frontend
+        npm run build
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - name: Deploy Frontend to S3
+      run: aws s3 sync ./frontend/build s3://${{ secrets.AWS_S3_BUCKET }} --acl public-read --delete
+      
+  deploy-backend:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setze SSH Verbindung
+      env:
+        SSH_KEY: ${{ secrets.SSH_KEY }}
+      run: |
+        mkdir -p ~/.ssh
+        echo "$SSH_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} "
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
+          sudo docker run -d -p 4000:4000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+        "
